--- a/proyectoU4/nbproject/private/private.properties
+++ b/proyectoU4/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mysql-connector-j-9.1.0.jar=E:\\elproyectodebd\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar=E:\\elproyectodebd\\mysql-connector-j-9.1.0.zip
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
