--- a/proyectoU4/nbproject/project.properties
+++ b/proyectoU4/nbproject/project.properties
@@ -38,13 +38,15 @@ excludes=
 file.reference.mysql-connector-j-8.3.0.jar=mysql-connector-j-9.1.0/mysql-connector-j-9.1.0/mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\jovan\\Downloads\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-1=mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-2=../mysql-connector-j-9.1.0/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
 file.reference.removable-KINGSTON=../..
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-9.1.0.jar}:\
-    ${file.reference.mysql-connector-j-9.1.0.jar-1}
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
