--- a/proyectoU4/nbproject/project.properties
+++ b/proyectoU4/nbproject/project.properties
@@ -36,16 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/proyectoU4
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=mysql-connector-j-9.1.0/mysql-connector-j-9.1.0/mysql-connector-j-8.3.0.jar
-file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\jovan\\Downloads\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
-file.reference.mysql-connector-j-9.1.0.jar-1=mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-2=../mysql-connector-j-9.1.0/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
 file.reference.removable-KINGSTON=../..
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.1.0.jar}:\
-    ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
     ${file.reference.mysql-connector-j-9.1.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -87,7 +83,7 @@ main.class=jFrames.jfrmLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_OpenJDK_21.0.2_13
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
